--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <link rel="stylesheet" href="css/styleSwitcher.css" >
 
 
-    <title> ASME </title>
+    <title> update asme </title>
 </head>
 <body>
 
